--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-card-grid">
-                    <img class="project-image" src="https://via.placeholder.com/250" alt="Project 1">
+                    <img class="project-image" src="./assets/UnderConstruction.jpeg" alt="Project 1">
                     <div class="project-info">
                         <p class="project-title">Portfolio Website</p>
                         <p class="project-description">A responsive portfolio website showcasing my skills and projects,
@@ -76,7 +76,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-grid">
-                    <img class="project-image" src="https://via.placeholder.com/250" alt="Project 2">
+                    <img class="project-image" src="./assets/UnderConstruction.jpeg" alt="Project 2">
                     <div class="project-info">
                         <p class="project-title">E-Commerce Platform</p>
                         <p class="project-description">An online shopping platform with a user-friendly interface, featuring
@@ -86,7 +86,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-grid">
-                    <img class="project-image" src="https://via.placeholder.com/250" alt="Project 3">
+                    <img class="project-image" src="./assets/UnderConstruction.jpeg" alt="Project 3">
                     <div class="project-info">
                         <p class="project-title">Blog Website</p>
                         <p class="project-description">A blog platform where users can create, edit, and publish articles,
@@ -96,7 +96,7 @@
             </div>
             <div class="project-card">
                 <div class="project-card-grid">
-                    <img class="project-image" src="https://via.placeholder.com/250" alt="Project 4">
+                    <img class="project-image" src="./assets/UnderConstruction.jpeg" alt="Project 4">
                     <div class="project-info">
                         <p class="project-title">Weather App</p>
                         <p class="project-description">A weather forecasting app that provides real-time weather updates and
