--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 class="name gradient-name">Muhib Ariyan</h1>
             <li class="nav-elem"><a class="nav-link" href="#Projects">Projects</a></li>
             <li class="nav-elem"><a class="nav-link" href="#Contact">Contact</a></li>
-            <button class="nav-menu-btn" onclick="navExtend()"></button>
+            <button class="nav-menu-btn no-select" onclick="navExtend()"></button>
         </div>
     </nav>
 <section id="Home" class="home-sec">
