--- a/Projects/TicTacToe/index.html
+++ b/Projects/TicTacToe/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="title">Gaming TicTacToe</h1>
+    <h1 class="gradient-text title">Gaming TicTacToe</h1>
     <dialog id="dialog">
       <h1 class="title">Game Over</h1>
       <div class="winner-div">
@@ -37,6 +37,9 @@
       <div class="square vert eight" id="7" onclick="move(this)"></div>
       <div class="square nine" id="8" onclick="move(this)"></div>
     </div>
+    <footer>
+      <p>Made with ❤️ by&nbsp;<span class="gradient-text footer-name">Muhib Ariyan</span>&nbsp;| Enjoy the game!</p>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
