--- a/Projects/TicTacToe/index.html
+++ b/Projects/TicTacToe/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="body">
     <h1 class="gradient-text title">Gaming TicTacToe</h1>
     <dialog id="dialog">
       <h1 class="title">Game Over</h1>
