--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="/src/app.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Crazy Math Game</title>
   </head>
   <body class="">
     <div id="root" class="w-full flex flex-col main-container">
