--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="/src/app.css" rel="stylesheet">
+    <link href="./src/App.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crazy Math Game</title>
   </head>
   <body class="">
     <div id="root" class="w-full flex flex-col main-container">
     </div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
