--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="./src/App.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crazy Math Game</title>
   </head>
-  <body class="">
+  <body>
     <div id="root" class="w-full flex flex-col main-container">
     </div>
     <script type="module" src="./src/main.jsx"></script>
