Revert "Update index.html"
This reverts commit 1f046e42c64c1ecbcb3ffd658518173369739a17.

--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root" class="w-full flex flex-col main-container">
     </div>
-    <script type="module" src="./my-portfolio/projects/crazy-math-game/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
