i hope its fixed now

--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -6,8 +6,6 @@
     <title>Crazy Math Game</title>
   </head>
   <body>
-    <div id="root" class="w-full flex flex-col main-container">
-    </div>
-    <script type="module" src="./src/main.jsx"></script>
+    <div id="root" class="w-full flex flex-col main-container"></div>
   </body>
 </html>
