--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -6,6 +6,8 @@
     <title>Crazy Math Game</title>
   </head>
   <body>
-    <div id="root" class="w-full flex flex-col main-container"></div>
-  </body>
-</html>
+    <div id="root" class="w-full flex flex-col main-container">
+    </div>
+    <script type="module" src="./src/main.jsx"></script>
+/script>
+tml>
