--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crazy Math Game</title>
   </head>
   <body>
-    <div id="root" class="w-full flex flex-col main-container">
-    </div>
-    <script type="module" src="./src/main.jsx"></script>
-/script>
-tml>
+      <div id="root" class="w-full flex flex-col main-container"></div>
+  </body>
+  <script type="module" src="./src/main.jsx"></script>
+</html>
