--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -6,7 +6,9 @@
     <title>Crazy Math Game</title>
   </head>
   <body>
-      <div id="root" class="w-full flex flex-col main-container"></div>
+      <div id="root" class="w-full flex flex-col main-container">
+        something changed
+      </div>
   </body>
   <script type="module" src="./src/main.jsx"></script>
 </html>
