--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
       <div id="root" class="w-full flex flex-col main-container">
-        something changed 2
+        something changed 3
       </div>
   </body>
-  <script type="module" src="my-portfolio/projects/crazy-math-game/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </html>
