--- a/projects/crazy-math-game/index.html
+++ b/projects/crazy-math-game/index.html
@@ -10,5 +10,5 @@
         something changed 3
       </div>
   </body>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </html>
